Handle active consumer change of partitions (#7)
Handling active consumer changes.
Refactoring sequence merging.
Fixing sequence range merge issues.