@@ -21,10 +21,9 @@ package io.streamnative.streaming.proof.worker;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 
-import io.streamnative.streaming.proof.common.LongSeq;
 import io.streamnative.streaming.proof.common.MessageMetadata;
 import io.streamnative.streaming.proof.common.ProofConsumer;
 import java.util.List;
@@ -55,8 +54,8 @@ public class ProofConsumerTaskTest {
             consumerTask.onMessage(KEY2, 1L, createMetadata(5L));
             consumerTask.onMessage(KEY3, 1L, createMetadata(6L));
 
-            assertEquals(consumerTask.getDups().get(), 0);
-            assertEquals(consumerTask.getOutOfOrders().get(), 0);
+            assertEquals(consumerTask.getDups().size(), 0);
+            assertEquals(consumerTask.getOutOfOrderSeqs().size(), 0);
             assertTrue(consumerTask.getMissedSeqs().isEmpty());
             assertTrue(consumerTask.getOutOfOrderSeqs().isEmpty());
         }
@@ -74,8 +73,8 @@ public class ProofConsumerTaskTest {
             consumerTask.onMessage(KEY2, 0L, createMetadata(5L));
             consumerTask.onMessage(KEY3, 0L, createMetadata(6L));
 
-            assertEquals(consumerTask.getDups().get(), 3);
-            assertEquals(consumerTask.getOutOfOrders().get(), 0);
+
+            assertEquals(consumerTask.getDups().values().stream().reduce(0, Integer::sum), 3);
             assertTrue(consumerTask.getMissedSeqs().isEmpty());
             assertTrue(consumerTask.getOutOfOrderSeqs().isEmpty());
         }
@@ -93,29 +92,33 @@ public class ProofConsumerTaskTest {
             consumerTask.onMessage(KEY2, 3L, createMetadata(11L));
             consumerTask.onMessage(KEY3, 5L, createMetadata(12L));
 
-            assertEquals(consumerTask.getDups().get(), 0);
-            assertEquals(consumerTask.getOutOfOrders().get(), 3);
-            
-            Map<String, List<List<LongSeq>>> outOfOrderSeqs = consumerTask.getOutOfOrderSeqs();
-            assertNotNull(outOfOrderSeqs.get(KEY1));
-            assertNotNull(outOfOrderSeqs.get(KEY2));
-            assertNotNull(outOfOrderSeqs.get(KEY3));
-            
-            // Verify both sequence numbers and metadata
-            List<LongSeq> key1Pair = outOfOrderSeqs.get(KEY1).getFirst();
-            assertEquals(key1Pair.get(0).seq(), 0L);
-            assertEquals(key1Pair.get(1).seq(), 4L);
-            assertEquals(key1Pair.get(1).metadata().offset(), 10L);
-
-            List<LongSeq> key2Pair = outOfOrderSeqs.get(KEY2).getFirst();
-            assertEquals(key2Pair.get(0).seq(), 0L);
-            assertEquals(key2Pair.get(1).seq(), 3L);
-            assertEquals(key2Pair.get(1).metadata().offset(), 11L);
-
-            List<LongSeq> key3Pair = outOfOrderSeqs.get(KEY3).getFirst();
-            assertEquals(key3Pair.get(0).seq(), 0L);
-            assertEquals(key3Pair.get(1).seq(), 5L);
-            assertEquals(key3Pair.get(1).metadata().offset(), 12L);
+            assertEquals(consumerTask.getDups().size(), 0);
+            assertEquals(consumerTask.getMissedSeqs().size(), 3);
+            assertEquals(consumerTask.getOutOfOrderSeqs().size(), 0);
+            consumerTask.onMessage(KEY1, 0L, createMetadata(13L));
+            consumerTask.onMessage(KEY2, 1L, createMetadata(14L));
+            consumerTask.onMessage(KEY3, 4L, createMetadata(15L));
+            assertEquals(consumerTask.getMissedSeqs().get(KEY1).size(), 0);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY2).size(), 0);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY3).size(), 1);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY3).getFirst().getFirst(), 1L);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY3).getFirst().getLast(), 3L);
+            assertEquals(consumerTask.getOutOfOrderSeqs().size(), 2);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY1).size(), 1);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY1).getFirst().getFirst().seq(), 4L);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY1).getFirst().getLast().seq(), 0L);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY2).size(), 1);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY2).getFirst().getFirst().seq(), 3L);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY2).getFirst().getLast().seq(), 1L);
+            assertNull(consumerTask.getOutOfOrderSeqs().get(KEY3));
+            consumerTask.onMessage(KEY3, 1L, createMetadata(15L));
+            consumerTask.onMessage(KEY3, 2L, createMetadata(16L));
+            consumerTask.onMessage(KEY3, 3L, createMetadata(15L));
+            assertEquals(consumerTask.getKeySeq().get(KEY3).seq(), 3L);
+            assertNull(consumerTask.getMissedSeqs().get(KEY3));
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY3).size(), 1);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY3).getFirst().getFirst().seq(), 4L);
+            assertEquals(consumerTask.getOutOfOrderSeqs().get(KEY3).getFirst().getLast().seq(), 1L);
         }
     }
 
@@ -131,13 +134,17 @@ public class ProofConsumerTaskTest {
             consumerTask.onMessage(KEY2, 4L, createMetadata(11L));
             consumerTask.onMessage(KEY3, 6L, createMetadata(12L));
 
-            Map<String, List<Long>> missedSeqs = consumerTask.getMissedSeqs();
-            assertEquals(missedSeqs.get(KEY1).size(), 4); // Missing 1,2,3,4
-            assertEquals(missedSeqs.get(KEY1), List.of(1L, 2L, 3L, 4L));
-            assertEquals(missedSeqs.get(KEY2).size(), 3); // Missing 1,2,3
-            assertEquals(missedSeqs.get(KEY2), List.of(1L, 2L, 3L));
-            assertEquals(missedSeqs.get(KEY3).size(), 5); // Missing 1,2,3,4,5
-            assertEquals(missedSeqs.get(KEY3), List.of(1L, 2L, 3L, 4L, 5L));
+            Map<String, List<List<Long>>> missedSeqs = consumerTask.getMissedSeqs();
+            assertEquals(missedSeqs.get(KEY1).size(), 1); // Missing 1,2,3,4
+            assertEquals(missedSeqs.get(KEY1), List.of(List.of(1L, 4L)));
+            assertEquals(missedSeqs.get(KEY2).size(), 1); // Missing 1,2,3
+            assertEquals(missedSeqs.get(KEY2), List.of(List.of(1L, 3L)));
+            assertEquals(missedSeqs.get(KEY3).size(), 1); // Missing 1,2,3,4,5
+            assertEquals(missedSeqs.get(KEY3), List.of(List.of(1L, 5L)));
+
+            consumerTask.onMessage(KEY1, 8L, createMetadata(15L));
+            assertEquals(missedSeqs.get(KEY1).size(), 2); // Missing 1,2,3,4,6,7
+            assertEquals(missedSeqs.get(KEY1), List.of(List.of(1L, 4L), List.of(6L, 7L)));
         }
     }
 
@@ -156,9 +163,16 @@ public class ProofConsumerTaskTest {
             // Recover missing sequences with later offsets
             consumerTask.onMessage(KEY1, 1L, createMetadata(12L));
             consumerTask.onMessage(KEY1, 2L, createMetadata(13L));
+            consumerTask.onMessage(KEY2, 2L, createMetadata(16L));
+            assertEquals(consumerTask.getMissedSeqs().size(), 2);
+            assertEquals(consumerTask.getKeySeq().get(KEY1).seq(), 2L);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY2), List.of(List.of(1L, 1L)));
+            assertEquals(consumerTask.getKeySeq().get(KEY2).seq(), 2L);
+            assertEquals(consumerTask.getMissedSeqs().get(KEY3), List.of(List.of(1L, 3L)));
+            assertEquals(consumerTask.getKeySeq().get(KEY3).seq(), 4L);
             consumerTask.onMessage(KEY1, 3L, createMetadata(14L));
             consumerTask.onMessage(KEY2, 1L, createMetadata(15L));
-            consumerTask.onMessage(KEY2, 2L, createMetadata(16L));
+            consumerTask.onMessage(KEY2, 2L, createMetadata(19L));
             consumerTask.onMessage(KEY2, 3L, createMetadata(17L));
             consumerTask.onMessage(KEY3, 1L, createMetadata(18L));
             consumerTask.onMessage(KEY3, 2L, createMetadata(19L));
